# TheFederation

./: .gitignore  Pipfile  README.md  setup.cfg
plugins/core/: __init__.py
plugins/core/startup/: login.py
plugins/core/web/: __init__.py  server.py
