[metadata]
name = TheFederation
version = attr: fds.__version__
platforms = any

[options]
packages = find:
python_requires = >=3.6
install_requires =
    erin @ git+https://github.com/DiscordFederation/Erin.git@master#egg=erin
    starlette
    hypercorn

[options.extras_require]
docs =
    Sphinx
    sphinx_rtd_theme
tests =
    pytest
    pytest-cov
    pytest-runner

[options.packages.find]
include =
    fds
    fds.*

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 0

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
